# lightpanel

./: .gitignore  .parcelrc  .proxyrc.json  README.md  index.html  package-lock.json  package.json  snowpack.config.mjs  svelte.config.js  vite.config.js
engine/: Communicator.js  Executor.js  Renderer.js  color.js  configured.js  gamma.js  kelvin.js  layout.js  math.js  palettes.js  swatches.js
frontend/: App.css  App.svelte  App.tsx  Canvas.svelte  CanvasPixelView.js  Visualization.svelte  css.js  engine.js  globals.js  index.html  index.js  index.tsx  renderer.js
frontend/widgets/: Button.svelte  Color.svelte  ColorPicker.svelte  Selector.svelte  Slider.svelte
patterns/: clouds.js  colorNoise.js  dvd.js  gptDonkey.js  gptGradient.js  gptSine.js  gptSpin.js  gradient.js  hueRotate.js  index.js  indexSnake.js  matrix.js  noise.js  sineWave.js  skyline.js  solid.js  squareNoise.js  stripes.js
server/: index.js  serial.js
stm32/: Cargo.toml
stm32/.cargo/: config.toml
stm32/src/: main.rs
teensy/: compile_and_flash.sh  generatePixelMap.js
teensy/LightPanelArduino/: LightPanelArduino.ino
teensy/LightPanelArduino/LightPanelArduinoRaw/: LightPanelArduinoRaw.ino
