[package]
name = "stm32f411-rust-neopixel"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nb = "1"
cortex-m = "0.7"
cortex-m-rt = "0.7.5"
# Panic behaviour, see https://crates.io/keywords/panic-impl for alternatives
panic-halt = "0.2"

smart-leds = "0.3.0"
ws2812-spi = "0.4.0"

[dependencies.embedded-hal]
features = ["unproven"]
version = "0.2.4"

[dependencies.stm32g4xx-hal]
git = "https://github.com/stm32-rs/stm32g4xx-hal.git"
branch = "staged-pac"
features = ["stm32g491"]